--- a/gallery.css
+++ b/gallery.css
@@ -197,3 +197,8 @@
 		grid-column: 2 / 3;
 	}
 }
+@media screen and (max-width: 800px) {
+	.photoArray {
+		grid-template-rows: repeat(4, 70px);
+		grid-template-columns: repeat(3, 100px);
+	}
